--- a/templates/url/index.html.twig
+++ b/templates/url/index.html.twig
@@ -6,29 +6,34 @@
 
 {% block body %}
     <h1>{{ 'title.url_list'|trans }}</h1>
-    {% if urls is defined and urls|length %}
+    {% if pagination is defined and pagination.items|length %}
+        <div class="navigation text-center">
+            {{ knp_pagination_render(pagination) }}
+        </div>
         <table class="table table-striped">
             <thead>
             <tr>
                 <th>{{ 'label.id'|trans }}</th>
                 <th>{{ 'label.long_url' }}</th>
+                <th>{{ 'label.click_count'|trans }}</th>
                 <th>{{ 'label.creation_date'|trans }}</th>
                 <th>{{ 'label.mod_date'|trans }}</th>
                 <th>{{ 'label.actions'|trans }}</th>
             </tr>
             </thead>
             <tbody>
-            {% for url in urls %}
+            {% for url in pagination %}
                 <tr>
-                    <td>{{ url.id }}</td>
-                    <td><a href="{{ url.longUrl }}" target="_blank">{{ url.longUrl }}</a> (<a href="{{app.request.getSchemeAndHttpHost()}}/url/{{ url.id }}">{{app.request.getSchemeAndHttpHost()}}/url/{{ url.id }}</a>)</td>
-                    <td>{{ url.creationDate|date }}</td>
-                    <td>{{ url.modDate|date }}</td>
+                    <td>{{ url[0].id }}</td>
+                    <td><a href="{{ url[0].longUrl }}" target="_blank">{{ url[0].longUrl }}</a> (<a href="{{app.request.getSchemeAndHttpHost()}}/url/{{ url[0].id }}">{{app.request.getSchemeAndHttpHost()}}/url/{{ url[0].id }}</a>)</td>
+                    <td>{{ url.count }}</td>
+                    <td>{{ url[0].creationDate|date }}</td>
+                    <td>{{ url[0].modDate|date }}</td>
                     <td>
-                        <a href="{{ url('url_redirect', {id: url.id}) }}" title="{{ 'action.go_to'|trans }}">
+                        <a href="{{ url('url_redirect', {id: url[0].id}) }}" title="{{ 'action.go_to'|trans }}">
                             {{ 'action.go_to'|trans }}
                         </a>
-                        <a href="{{ url('url_show', {id: url.id}) }}" title="{{ 'action.details'|trans }}">
+                        <a href="{{ url('url_show', {id: url[0].id}) }}" title="{{ 'action.details'|trans }}">
                             {{ 'action.details'|trans }}
                         </a>
                     </td>
