--- a/templates/default/_navigation.html.twig
+++ b/templates/default/_navigation.html.twig
@@ -1,13 +1,13 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">URL shortener</a>
+        <a class="navbar-brand" href="{{ path('index') }}">URL shortener</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">{{ 'nav.home'|trans }}</a>
+                    <a class="nav-link" href="{{ path('url_index') }}">{{ 'nav.urls'|trans }}</a>
                 </li>
             </ul>
         </div>
