--- a/templates/url/show.html.twig
+++ b/templates/url/show.html.twig
@@ -16,8 +16,10 @@
             <dd><a href="{{ url.longUrl }}" target="_blank">{{ url.longUrl }}</a></dd>
             <dt>{{ 'label.short_url'|trans }}</dt>
             <dd><a href="{{ url('url_redirect', {id: url.id}) }}">{{ url('url_redirect', {id: url.id}) }}</a></dd>
-            <dt>{{ 'label.added_by'|trans }}</dt>
-            <dd><a href="mailto:{{ url.anonymousUser.email }}">{{ url.anonymousUser.email }}</a></dd>
+            {% if is_granted('ROLE_ADMIN') %}
+                <dt>{{ 'label.added_by'|trans }}</dt>
+                <dd><a href="mailto:{{ url.anonymousUser.email }}">{{ url.anonymousUser.email }}</a></dd>
+            {% endif %}
             <dt>{{ 'label.creation_date'|trans }}</dt>
             <dd>{{ url.creationDate|date('Y/m/d') }}</dd>
             <dt>{{ 'label.mod_date'|trans }}</dt>
@@ -26,7 +28,8 @@
             <dd>
                 {% if url.tags is defined and url.tags|length %}
                     {% for tag in url.tags %}
-                        <a href="{{ url('url_index', {'filters.tag_id' : tag.id}) }}" title="{{ tag.title }}">{{ tag.title }}</a>&nbsp;
+                        <a href="{{ url('url_index', {'filters.tag_id' : tag.id}) }}"
+                           title="{{ tag.title }}">{{ tag.title }}</a>&nbsp;
                     {% endfor %}
                 {% else %}
                     -
@@ -37,14 +40,16 @@
                 <a href="{{ url('url_redirect', {id: url.id }) }}" title="{{ 'action.go_to_url'|trans }}">
                     {{ 'action.go_to'|trans }}
                 </a>
-                <br>
-                <a href="{{ url('url_edit', {id: url.id}) }}" title="{{ 'action.edit'|trans }}">
-                    {{ 'action.edit'|trans }}
-                </a>
-                <br>
-                <a href="{{ url('url_delete', {id: url.id}) }}" title="{{ 'action.delete'|trans }}">
-                    {{ 'action.delete'|trans }}
-                </a>
+                {% if is_granted('ROLE_ADMIN') %}
+                    <br>
+                    <a href="{{ url('url_edit', {id: url.id}) }}" title="{{ 'action.edit'|trans }}">
+                        {{ 'action.edit'|trans }}
+                    </a>
+                    <br>
+                    <a href="{{ url('url_delete', {id: url.id}) }}" title="{{ 'action.delete'|trans }}">
+                        {{ 'action.delete'|trans }}
+                    </a>
+                {% endif %}
             </dd>
         </dl>
         <p>
@@ -57,33 +62,36 @@
             {{ 'message.record_not_found'|trans }}
         </p>
     {% endif %}
-    <h2>{{ 'title.click_data'|trans }}</h2>
+    {% if is_granted('ROLE_ADMIN') %}
 
-    {% if pagination is defined and pagination.items|length %}
-        <div class="navigation text-center">
-            {{ knp_pagination_render(pagination) }}
-        </div>
-        <table class="table table-striped">
-            <thead>
-            <tr>
-                <th>{{ knp_pagination_sortable(pagination, 'label.id'|trans, 'click.id') }}</th>
-                <th>{{ knp_pagination_sortable(pagination, 'label.date'|trans, 'click.date') }}</th>
-                <th>{{ knp_pagination_sortable(pagination, 'label.ip_address'|trans, 'click.ip') }}</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for click in pagination %}
+        <h2>{{ 'title.click_data'|trans }}</h2>
+
+        {% if pagination is defined and pagination.items|length %}
+            <div class="navigation text-center">
+                {{ knp_pagination_render(pagination) }}
+            </div>
+            <table class="table table-striped">
+                <thead>
                 <tr>
-                    <td>{{ click.id }}</td>
-                    <td>{{ click.date|date }}</td>
-                    <td>{{ click.ip }}</td>
+                    <th>{{ knp_pagination_sortable(pagination, 'label.id'|trans, 'click.id') }}</th>
+                    <th>{{ knp_pagination_sortable(pagination, 'label.date'|trans, 'click.date') }}</th>
+                    <th>{{ knp_pagination_sortable(pagination, 'label.ip_address'|trans, 'click.ip') }}</th>
                 </tr>
-            {% endfor %}
-            </tbody>
-        </table>
-    {% else %}
-        <p>
-            {{ 'message.empty_list'|trans }}
-        </p>
+                </thead>
+                <tbody>
+                {% for click in pagination %}
+                    <tr>
+                        <td>{{ click.id }}</td>
+                        <td>{{ click.date|date }}</td>
+                        <td>{{ click.ip }}</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        {% else %}
+            <p>
+                {{ 'message.empty_list'|trans }}
+            </p>
+        {% endif %}
     {% endif %}
 {% endblock %}
