--- a/templates/default/_navigation.html.twig
+++ b/templates/default/_navigation.html.twig
@@ -1,7 +1,8 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="{{ path('index') }}">URL shortener</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -9,7 +10,24 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('url_index') }}">{{ 'nav.urls'|trans }}</a>
                 </li>
+                {% if is_granted('ROLE_ADMIN') %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('user_edit') }}">{{ 'nav.user_edit'|trans }}</a>
+                    </li>
+                {% endif %}
             </ul>
+        </div>
+        <div class="me-3 bg-dark text-white">
+            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                <div class="bg-dark">{{ app.user.name }} {{ app.user.surname }}</div>
+                <div>
+                    <a href="{{ url('app_logout') }}">{{ 'action_logout'|trans }}</a>
+                </div>
+            {% else %}
+                <div>
+                    <a href="{{ url('app_login') }}">{{ 'action_login'|trans }}</a>
+                </div>
+            {% endif %}
         </div>
     </nav>
 </header>
