--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -6,6 +6,9 @@
 
 {% block body %}
     <h1>{{ 'title.index'|trans }}</h1>
-    <p>{{ 'info.index_info' }}</p>
+    <p>{{ 'info.index_info'|trans }}</p>
+    <p>{{ 'info.index_credentials'|trans }}</p>
+    <strong>admin0@example.com</strong><br>
+    <strong>admin1234</strong>
 
 {% endblock %}
