--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -10,7 +10,7 @@
 
         {% if app.user %}
             <div class="mb-3">
-{{ 'info.you_are_logged_in_as'|trans }} {{ app.user.name }} {{ app.user.surname }} ({{ app.user.userIdentifier }}), <a href="{{ path('app_logout') }}">{{ 'action.logout' }}</a>
+{{ 'info.you_are_logged_in_as'|trans }} {{ app.user.name }} {{ app.user.surname }} ({{ app.user.userIdentifier }}), <a href="{{ path('app_logout') }}">{{ 'action.logout'|trans }}</a>
             </div>
 
         {% else %}
