--- a/templates/url/show.html.twig
+++ b/templates/url/show.html.twig
@@ -10,7 +10,7 @@
         <dl class="dl-horizontal">
             <dt>{{ 'label.id'|trans }}</dt>
             <dd>{{ url.id }}</dd>
-            <dt>{{ 'label.clicks' }}</dt>
+            <dt>{{ 'label.clicks'|trans }}</dt>
             <dd>{% if url.clicks|length %}{{ url.clicks|length }}{% else %}0{% endif %}</dd>
             <dt>{{ 'label.long_url'|trans }}</dt>
             <dd><a href="{{ url.longUrl }}" target="_blank">{{ url.longUrl }}</a></dd>
