--- a/templates/security/change_user_data.html.twig
+++ b/templates/security/change_user_data.html.twig
@@ -1,5 +1,5 @@
 <!--
-{% <!-- include 'default/_form.html.twig' with {
+{% include 'default/_form.html.twig' with {
     page_title: 'title.user_edit'|trans,
     form: form,
     submit_label: 'action.edit'|trans,
